fix the z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,6 @@ h2 {
   color: white;
 }
 
-
-
 .header {
   font-family: 'Montserrat-Black', sans-serif;
   font-size: 3.5rem;
@@ -57,6 +55,7 @@ h2 {
   transform: rotate(25deg);
   position: absolute;
   right: 30%;
+
 }
 
 /*Download Button*/
@@ -65,10 +64,13 @@ h2 {
 }
 
 /* Features */
-#votos {
-  padding: 7% 15%;
-
+#features {
   position: relative;
+  padding: 7% 15%;
+  background-color: #fff;
+  z-index: 1;
+
+
 }
 
 
